--- a/index.html
+++ b/index.html
@@ -14,60 +14,68 @@
     <title>Product Home Page</title>
   </head>
   <body>
-    <nav>
-      <img class="logo" src="./images/logo.svg" alt="logo" />
-      <div class="nav-items">
-        <h5 class="nav-item active-item">Home</h5>
-        <h5 class="nav-item">Product</h5>
-        <h5 class="nav-item">Price</h5>
-        <h5 class="nav-item">About</h5>
-      </div>
-      <img class="actions" src="./images/actions.svg" alt="actions" />
-    </nav>
-    <div class="intro-section">
-      <div class="left-section">
-        <h3>
-          New Product
-          <img src="./images/circles.svg" alt="circles" />
-        </h3>
-        <h1>Wireless Headphone</h1>
-        <div class="sub-headlines">
-          <h5 class="sub-headline">
-            <img src="./images/plus.svg" alt="plus" /> Clear Sound
-          </h5>
-          <h5 class="sub-headline">
-            <img src="./images/plus.svg" alt="plus" /> FM Function
-          </h5>
-          <h5 class="sub-headline">
-            <img src="./images/plus.svg" alt="plus" /> Up To 11 Hours Playtime
-          </h5>
+    <div class="container">
+      <nav>
+        <img class="logo" src="./images/logo.svg" alt="logo" />
+        <div class="nav-items">
+          <h5 class="nav-item active-item">Home</h5>
+          <h5 class="nav-item">Product</h5>
+          <h5 class="nav-item">Price</h5>
+          <h5 class="nav-item">About</h5>
         </div>
-        <p class="text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
-        </p>
-        <div class="action-btns">
-          <button class="action-btn">Go Shopping</button>
-          <button class="action-btn">See Catalog</button>
-        </div>
-      </div>
-      <div class="right-section">
-        <div class="headphone-div">
-          <img src="./images/discount.svg" alt="discount" class="discount" />
-          <div class="discount-content">
-            <h4>Discount</h4>
-            <h1>50%</h1>
+        <img class="actions" src="./images/actions.svg" alt="actions" />
+      </nav>
+      <div class="intro-section">
+        
+        <!-- left side  -->
+
+        <div class="left-section">
+          <h3>
+            New Product
+            <img src="./images/circles.svg" alt="circles" />
+          </h3>
+          <h1>Wireless Headphone</h1>
+          <div class="sub-headlines">
+            <h5 class="sub-headline">
+              <img src="./images/plus.svg" alt="plus" /> Clear Sound
+            </h5>
+            <h5 class="sub-headline">
+              <img src="./images/plus.svg" alt="plus" /> FM Function
+            </h5>
+            <h5 class="sub-headline">
+              <img src="./images/plus.svg" alt="plus" /> Up To 11 Hours Playtime
+            </h5>
           </div>
-          <img class="headphone" src="./images/headphones.jpg" alt="headphone" />
+          <p class="text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+            minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
+          <div class="action-btns">
+            <button class="action-btn">Go Shopping</button>
+            <button class="action-btn">See Catalog</button>
+          </div>
         </div>
-        <div class="dots">
-          <div class="dotyellow-dot"></div>
-          <div class="dottomato-dot"></div>
-          <div class="dotblack-dot"></div>
+
+        <!-- right-side -->
+        
+        <div class="right-section">
+          <div class="headphone-div">
+            <img src="./images/discount.svg" alt="discount" class="discount" />
+            <div class="discount-content">
+              <h4>Discount</h4>
+              <h1>50%</h1>
+            </div>
+            <img class="headphone" src="./images/headphones.jpg" alt="headphone" />
+          </div>
+          <div class="dots">
+            <div class="dotyellow-dot"></div>
+            <div class="dottomato-dot"></div>
+            <div class="dotblack-dot"></div>
+          </div>
+          <button class="action-btn">Add to chart</button>
         </div>
-        <button class="action-btn">Add to chart</button>
       </div>
     </div>
   </body>
